--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -265,13 +265,104 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "824e37a3",
+   "id": "7f07099d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "measured_metrics = pd.DataFrame(\n",
-    "    {\"Metric\": [\"Accuracy\", \"Precision\", \"Recall\", \"F1\", \"ROC-AUC\", \"HTER\"]}\n",
-    ")"
+    "path_to_metrics_result = \"../reports/tables/metrics_report.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "be99daa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(path_to_metrics_result):\n",
+    "    measured_metrics = pd.read_csv(path_to_metrics_result)\n",
+    "else:\n",
+    "    measured_metrics = pd.DataFrame(\n",
+    "        {\"Metric\": [\"Accuracy\", \"Precision\", \"Recall\", \"F1\", \"ROC-AUC\", \"HTER\"]}\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c4bf4dec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Accuracy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Precision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Recall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ROC-AUC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HTER</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Metric\n",
+       "0   Accuracy\n",
+       "1  Precision\n",
+       "2     Recall\n",
+       "3         F1\n",
+       "4    ROC-AUC\n",
+       "5       HTER"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measured_metrics"
    ]
   },
   {
@@ -284,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "58b2c172",
    "metadata": {},
    "outputs": [],
@@ -314,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "1e56a16b",
    "metadata": {
     "scrolled": true
@@ -390,7 +481,7 @@
        "5       HTER                                           0.019608 "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "da77924d",
    "metadata": {},
    "outputs": [],
@@ -439,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "47a48954",
    "metadata": {},
    "outputs": [
@@ -528,7 +619,7 @@
        "5                                              0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "0440ed4a",
    "metadata": {},
    "outputs": [],
@@ -577,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "4193b5a4",
    "metadata": {},
    "outputs": [
@@ -673,7 +764,7 @@
        "5                                              0.0                    0.029412  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "66a2fbf3",
    "metadata": {},
    "outputs": [],
@@ -722,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "46da98a2",
    "metadata": {
     "scrolled": false
@@ -843,7 +934,7 @@
        "5                                           0.004950            "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "40150aa6",
    "metadata": {},
    "outputs": [],
@@ -894,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "05595888",
    "metadata": {
     "scrolled": false
@@ -1030,7 +1121,7 @@
        "5                                                0.0         "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "1f73e499",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "9425f711",
    "metadata": {
     "scrolled": true
@@ -1230,7 +1321,7 @@
        "5                             0.160225  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "05acd5ba",
    "metadata": {},
    "outputs": [],
@@ -1292,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "f60ed0cf",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1539,7 @@
        "5                             0.160225                             0.019608  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "121a37c1",
    "metadata": {},
    "outputs": [],
@@ -1511,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "8583b8a5",
    "metadata": {
     "scrolled": true
@@ -1684,7 +1775,7 @@
        "5                                      0.351295  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1703,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "6ca6e4ac",
    "metadata": {},
    "outputs": [],
@@ -1712,7 +1803,7 @@
     "y = th_data[\"classes\"].copy()\n",
     "\n",
     "for img in th_data[\"images\"]:\n",
-    "    X.append(lbp_hist_features(img))\n",
+    "    X.append(lbp_hist_features(img, 40, 80))\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -1731,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "5dc128fc",
    "metadata": {
     "scrolled": true
@@ -1782,7 +1873,7 @@
        "      <td>0.856209</td>\n",
        "      <td>0.980392</td>\n",
        "      <td>0.647059</td>\n",
-       "      <td>0.784314</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1795,7 +1886,7 @@
        "      <td>0.788462</td>\n",
        "      <td>0.961538</td>\n",
        "      <td>0.485714</td>\n",
-       "      <td>0.621622</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1808,7 +1899,7 @@
        "      <td>0.788462</td>\n",
        "      <td>0.980392</td>\n",
        "      <td>0.653846</td>\n",
-       "      <td>0.901961</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1821,7 +1912,7 @@
        "      <td>0.788462</td>\n",
        "      <td>0.970874</td>\n",
        "      <td>0.557377</td>\n",
-       "      <td>0.736000</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1834,7 +1925,7 @@
        "      <td>0.839775</td>\n",
        "      <td>0.980392</td>\n",
        "      <td>0.648705</td>\n",
-       "      <td>0.813725</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1847,7 +1938,7 @@
        "      <td>0.160225</td>\n",
        "      <td>0.019608</td>\n",
        "      <td>0.351295</td>\n",
-       "      <td>0.186275</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1903,15 +1994,15 @@
        "5                             0.160225                             0.019608   \n",
        "\n",
        "   HeuristicFeatures-SVM (for GrayScale of RGB)  LBP-SVM (for Thermal)  \n",
-       "0                                      0.647059               0.784314  \n",
-       "1                                      0.485714               0.621622  \n",
-       "2                                      0.653846               0.901961  \n",
-       "3                                      0.557377               0.736000  \n",
-       "4                                      0.648705               0.813725  \n",
-       "5                                      0.351295               0.186275  "
+       "0                                      0.647059                    1.0  \n",
+       "1                                      0.485714                    1.0  \n",
+       "2                                      0.653846                    1.0  \n",
+       "3                                      0.557377                    1.0  \n",
+       "4                                      0.648705                    1.0  \n",
+       "5                                      0.351295                    0.0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "830fae0f",
    "metadata": {},
    "outputs": [],
@@ -1939,7 +2030,7 @@
     "y = rgb_data[\"classes\"].copy()\n",
     "\n",
     "for img in rgb_data[\"images\"]:\n",
-    "    X.append(lbp_hist_features(cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)))\n",
+    "    X.append(lbp_hist_features(cv2.cvtColor(img, cv2.COLOR_RGB2GRAY), 40, 80))\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -1960,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "82f364fd",
    "metadata": {},
    "outputs": [
@@ -2010,8 +2101,8 @@
        "      <td>0.856209</td>\n",
        "      <td>0.980392</td>\n",
        "      <td>0.647059</td>\n",
-       "      <td>0.784314</td>\n",
-       "      <td>0.849673</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.993464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2024,8 +2115,8 @@
        "      <td>0.788462</td>\n",
        "      <td>0.961538</td>\n",
        "      <td>0.485714</td>\n",
-       "      <td>0.621622</td>\n",
-       "      <td>0.745763</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2038,8 +2129,8 @@
        "      <td>0.788462</td>\n",
        "      <td>0.980392</td>\n",
        "      <td>0.653846</td>\n",
-       "      <td>0.901961</td>\n",
-       "      <td>0.846154</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.980769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2052,8 +2143,8 @@
        "      <td>0.788462</td>\n",
        "      <td>0.970874</td>\n",
        "      <td>0.557377</td>\n",
-       "      <td>0.736000</td>\n",
-       "      <td>0.792793</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.990291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2066,8 +2157,8 @@
        "      <td>0.839775</td>\n",
        "      <td>0.980392</td>\n",
        "      <td>0.648705</td>\n",
-       "      <td>0.813725</td>\n",
-       "      <td>0.848819</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.990385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2080,8 +2171,8 @@
        "      <td>0.160225</td>\n",
        "      <td>0.019608</td>\n",
        "      <td>0.351295</td>\n",
-       "      <td>0.186275</td>\n",
-       "      <td>0.151181</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.009615</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2137,23 +2228,23 @@
        "5                             0.160225                             0.019608   \n",
        "\n",
        "   HeuristicFeatures-SVM (for GrayScale of RGB)  LBP-SVM (for Thermal)  \\\n",
-       "0                                      0.647059               0.784314   \n",
-       "1                                      0.485714               0.621622   \n",
-       "2                                      0.653846               0.901961   \n",
-       "3                                      0.557377               0.736000   \n",
-       "4                                      0.648705               0.813725   \n",
-       "5                                      0.351295               0.186275   \n",
+       "0                                      0.647059                    1.0   \n",
+       "1                                      0.485714                    1.0   \n",
+       "2                                      0.653846                    1.0   \n",
+       "3                                      0.557377                    1.0   \n",
+       "4                                      0.648705                    1.0   \n",
+       "5                                      0.351295                    0.0   \n",
        "\n",
        "   LBP-SVM (for GrayScale of RGB)  \n",
-       "0                        0.849673  \n",
-       "1                        0.745763  \n",
-       "2                        0.846154  \n",
-       "3                        0.792793  \n",
-       "4                        0.848819  \n",
-       "5                        0.151181  "
+       "0                        0.993464  \n",
+       "1                        1.000000  \n",
+       "2                        0.980769  \n",
+       "3                        0.990291  \n",
+       "4                        0.990385  \n",
+       "5                        0.009615  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,8 +2255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "0468586e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measured_metrics.to_csv(path_to_metrics_result, index=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "612c0fc3",
    "metadata": {},
    "outputs": [],
    "source": []
