--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -562,7 +562,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"RGB-LBP-SVM\"] = get_metric_values(\n",
+    "measured_metrics[\"Grayscale(RGB)-LBP-SVM\"] = get_metric_values(\n",
     "    y_test, y_pred\n",
     ").values()"
    ]
@@ -579,48 +579,6 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "36eb3220",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = []\n",
-    "y = classes.copy()\n",
-    "\n",
-    "for img in rgb_data[\"images\"]:\n",
-    "    X.append(\n",
-    "        calc_features(\n",
-    "            [img[:, :, 0], img[:, :, 1], img[:, :, 2]], [lbp_hist_features], 9\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "X = np.array(X)\n",
-    "y = np.array(y)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
-    "\n",
-    "measured_metrics[\"Grayscale(RGB)-LBP-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d9e7ad6",
-   "metadata": {},
-   "source": [
-    "## Алгоритм Thermal-LBP-SVM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d2171087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,6 +605,48 @@
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
     "measured_metrics[\"Thermal-LBP-SVM\"] = get_metric_values(\n",
+    "    y_test, y_pred\n",
+    ").values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9e7ad6",
+   "metadata": {},
+   "source": [
+    "## Алгоритм RGB-LBP-SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d2171087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = []\n",
+    "y = classes.copy()\n",
+    "\n",
+    "for rgb_img in rgb_data[\"images\"]:\n",
+    "    X.append(\n",
+    "        calc_features(\n",
+    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2]], [lbp_hist_features], 9\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "X = np.array(X)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
+    "svc_lin.fit(X_train_scaled, y_train)\n",
+    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "\n",
+    "measured_metrics[\"RGB-LBP-SVM\"] = get_metric_values(\n",
     "    y_test, y_pred\n",
     ").values()"
    ]
