--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -230,41 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "4cc7b5ae",
+   "execution_count": 266,
+   "id": "6d90ff79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def FAR_score(y_true, y_pred):\n",
-    "    y_true = y_true.astype(bool)\n",
-    "    y_pred = y_pred.astype(bool)\n",
-    "    return sum(y_pred & ~y_true) / len(y_true[np.where(y_true == False)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "27fddbdb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def FRR_score(y_true, y_pred):\n",
-    "    y_true = y_true.astype(bool)\n",
-    "    y_pred = y_pred.astype(bool)\n",
-    "    return sum(~y_pred & y_true) / len(y_true[np.where(y_true == True)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "3ddad067",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def HTER_score(y_true, y_pred):\n",
-    "    far = FAR_score(y_true, y_pred)\n",
-    "    frr = FRR_score(y_true, y_pred)\n",
-    "    hter = (far + frr) / 2\n",
+    "def BPCER_score(y_true, y_pred):\n",
+    "    y_true = y_true.astype(np.bool_)\n",
+    "    y_pred = y_pred.astype(np.bool_)\n",
+    "    return sum(y_pred & ~y_true) / len(y_true[np.where(y_true == False)])\n",
+    "\n",
+    "\n",
+    "def APCER_score(y_true, y_pred):\n",
+    "    y_true = y_true.astype(np.bool_)\n",
+    "    y_pred = y_pred.astype(np.bool_)\n",
+    "    return sum(~y_pred & y_true) / len(y_true[np.where(y_true == True)])\n",
+    "\n",
+    "\n",
+    "def ACER_score(y_true, y_pred):\n",
+    "    APCER = APCER_score(y_true, y_pred)\n",
+    "    BPCER = BPCER_score(y_true, y_pred)\n",
+    "    ACER = (far + frr) / 2\n",
     "    return hter"
    ]
   },
@@ -285,18 +271,21 @@
    "source": [
     "def get_metric_values(y_true, y_pred, pos_label=1):\n",
     "    return {\n",
-    "        \"accuracy\": accuracy_score(y_true, y_pred),\n",
-    "        \"precision\": precision_score(\n",
-    "            y_true, y_pred, average=\"binary\", pos_label=pos_label\n",
-    "        ),\n",
-    "        \"recall\": recall_score(y_true, y_pred, average=\"binary\", pos_label=pos_label),\n",
-    "        \"f1\": f1_score(y_true, y_pred, average=\"binary\", pos_label=pos_label),\n",
-    "        \"roc_auc\": roc_auc_score(\n",
+    "        \"APCER\": APCER_score(y_true, y_pred),\n",
+    "        \"BPCER\": BPCER_score(y_true, y_pred),\n",
+    "        \"ACER\": ACER_score(y_true, y_pred),\n",
+    "        \"AUC ROC\": roc_auc_score(\n",
     "            y_true,\n",
     "            y_pred,\n",
     "            average=\"weighted\",\n",
     "        ),\n",
-    "        \"hter\": HTER_score(y_true, y_pred),\n",
+    "        \"Accuracy\": accuracy_score(y_true, y_pred),\n",
+    "        \"Precision\": precision_score(\n",
+    "            y_true, y_pred, average=\"binary\", pos_label=pos_label\n",
+    "        ),\n",
+    "        \"Recall\": recall_score(y_true, y_pred, average=\"binary\", pos_label=pos_label),\n",
+    "        \"F1-Measure\": f1_score(y_true, y_pred, average=\"binary\", pos_label=pos_label),\n",
+    "        \"HTER\": HTER_score(y_true, y_pred),\n",
     "    }"
    ]
   },
@@ -435,9 +424,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"RGB-RDWT-Haralick-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "measured_metrics[\"RGB-RDWT-Haralick-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -459,11 +446,7 @@
     "y = classes.copy()\n",
     "\n",
     "for img in th_data[\"images\"]:\n",
-    "    X.append(\n",
-    "        calc_features(\n",
-    "            [img], [haralick_rdwt_features], 9\n",
-    "        )\n",
-    "    )\n",
+    "    X.append(calc_features([img], [haralick_rdwt_features], 9))\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -503,7 +486,9 @@
     "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
     "    X.append(\n",
     "        calc_features(\n",
-    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img], [haralick_rdwt_features], 9\n",
+    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
+    "            [haralick_rdwt_features],\n",
+    "            9,\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -519,9 +504,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"MC-RDWT-Haralick-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "measured_metrics[\"MC-RDWT-Haralick-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -544,11 +527,7 @@
     "\n",
     "for img in rgb_data[\"images\"]:\n",
     "    gray_rgb_img = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
-    "    X.append(\n",
-    "        calc_features(\n",
-    "            [gray_rgb_img], [lbp_hist_features], 9\n",
-    "        )\n",
-    "    )\n",
+    "    X.append(calc_features([gray_rgb_img], [lbp_hist_features], 9))\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -562,9 +541,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"Grayscale(RGB)-LBP-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "measured_metrics[\"Grayscale(RGB)-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -586,11 +563,7 @@
     "y = classes.copy()\n",
     "\n",
     "for img in th_data[\"images\"]:\n",
-    "    X.append(\n",
-    "        calc_features(\n",
-    "            [img], [lbp_hist_features], 9\n",
-    "        )\n",
-    "    )\n",
+    "    X.append(calc_features([img], [lbp_hist_features], 9))\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -604,9 +577,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"Thermal-LBP-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "measured_metrics[\"Thermal-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -630,7 +601,9 @@
     "for rgb_img in rgb_data[\"images\"]:\n",
     "    X.append(\n",
     "        calc_features(\n",
-    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2]], [lbp_hist_features], 9\n",
+    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2]],\n",
+    "            [lbp_hist_features],\n",
+    "            9,\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -646,9 +619,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"RGB-LBP-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "measured_metrics[\"RGB-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -672,7 +643,9 @@
     "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
     "    X.append(\n",
     "        calc_features(\n",
-    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img], [lbp_hist_features], 9\n",
+    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
+    "            [lbp_hist_features],\n",
+    "            9,\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -688,9 +661,7 @@
     "svc_lin.fit(X_train_scaled, y_train)\n",
     "y_pred = svc_lin.predict(X_test_scaled)\n",
     "\n",
-    "measured_metrics[\"MC-LBP-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "measured_metrics[\"MC-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -713,11 +684,11 @@
     "    mean_feature,\n",
     "    median_feature,\n",
     "    maximum_feature,\n",
-    "#     minimum_feature,\n",
+    "    #     minimum_feature,\n",
     "    fraction_pixels_for_interval_feature,\n",
-    "#     scatter_feature,\n",
-    "#     hist_feauture,\n",
-    "#     hist_gradient_feauture,\n",
+    "    #     scatter_feature,\n",
+    "    #     hist_feauture,\n",
+    "    #     hist_gradient_feauture,\n",
     "    ratio_upper_lower_parts_feature,\n",
     "]\n",
     "\n",
@@ -725,11 +696,7 @@
     "y = classes.copy()\n",
     "\n",
     "for th_img in th_data[\"images\"]:\n",
-    "    X.append(\n",
-    "        calc_features(\n",
-    "            [th_img], feature_funcs, 9\n",
-    "        )\n",
-    "    )\n",
+    "    X.append(calc_features([th_img], feature_funcs, 9))\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
