--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "0e7542f8",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "9a263af2",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "53c4a708",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "da16e766",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "bf57a12b",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "78be0cc1",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "a502080a",
    "metadata": {},
    "outputs": [],
@@ -230,8 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "id": "6d90ff79",
+   "execution_count": 8,
+   "id": "c6fd1736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "ac6ab68e",
    "metadata": {},
    "outputs": [],
@@ -279,19 +279,17 @@
     "            y_pred,\n",
     "            average=\"weighted\",\n",
     "        ),\n",
-    "        \"Accuracy\": accuracy_score(y_true, y_pred),\n",
     "        \"Precision\": precision_score(\n",
     "            y_true, y_pred, average=\"binary\", pos_label=pos_label\n",
     "        ),\n",
     "        \"Recall\": recall_score(y_true, y_pred, average=\"binary\", pos_label=pos_label),\n",
     "        \"F1-Measure\": f1_score(y_true, y_pred, average=\"binary\", pos_label=pos_label),\n",
-    "        \"HTER\": HTER_score(y_true, y_pred),\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "0485905d",
    "metadata": {},
    "outputs": [],
@@ -301,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "4d66ece8",
    "metadata": {},
    "outputs": [],
@@ -310,13 +308,13 @@
     "    measured_metrics = pd.read_csv(path_to_metrics_result)\n",
     "else:\n",
     "    measured_metrics = pd.DataFrame(\n",
-    "        {\"Metric\": [\"Accuracy\", \"Precision\", \"Recall\", \"F1\", \"ROC-AUC\", \"HTER\"]}\n",
+    "        {\"Metric\": [\"APCER\", \"BPCER\", \"ACER\", \"AUC ROC\", \"Precision\", \"Recall\", \"F1-Measure\"]}\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "cf8db982",
    "metadata": {},
    "outputs": [
@@ -347,23 +345,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Accuracy</td>\n",
+       "      <td>APCER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Precision</td>\n",
+       "      <td>BPCER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Recall</td>\n",
+       "      <td>ACER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>F1</td>\n",
+       "      <td>AUC ROC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ROC-AUC</td>\n",
+       "      <td>Precision</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -371,20 +369,52 @@
       ],
       "text/plain": [
        "      Metric\n",
-       "0   Accuracy\n",
-       "1  Precision\n",
-       "2     Recall\n",
-       "3         F1\n",
-       "4    ROC-AUC"
+       "0      APCER\n",
+       "1      BPCER\n",
+       "2       ACER\n",
+       "3    AUC ROC\n",
+       "4  Precision"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "measured_metrics.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc2d8e1",
+   "metadata": {},
+   "source": [
+    "## Разбиение набора данных на тренировочную и тестовую выборки"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e91df63b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = []\n",
+    "y = classes.copy()\n",
+    "\n",
+    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    X.append({\"rgb\": rgb_img, \"thermal\": th_img})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eed82865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
   },
   {
